[gd_scene load_steps=2 format=3 uid="uid://bt8dbdvha3agw"]

[ext_resource type="Script" path="res://pmenu.gd" id="1_l73sm"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 2
visible = false
script = ExtResource("1_l73sm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.0
offset_top = -51.0
offset_right = 286.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Продолжить"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Меню"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Выйти"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
